<resources>
    <string name="banner_ad_unit_id">ca-app-pub-9509252227226116/3596221985</string>
    <!-- global -->
    <string name="app_name">Hold住时间</string>
    <string name="app_company">UncleAndroid科技 版权所有</string>
    <string name="app_copyright_date">Copyright © 2017-2025 UncleAndroid.</string>
    <string name="app_version">程序版本：2.0</string>
    <string name="app_all_right">All Rights Reserved.</string>
    <string name="app_back">返回</string>
    <string name="app_cancel">取消</string>
    <string name="app_confirm">保存</string>
    <string name="app_yes">是</string>
    <string name="app_no">否</string>
    <string name="app_today">今天</string>
    <string name="app_tomorrow">明天</string>
    <!-- 主页面 -->
    <string name="tab_finish">完成</string>
    <string name="tab_unfinish">未完成</string>
    <string name="tab_dated">过期</string>
    <string name="tab_settings">设置</string>
    <string name="tab_more">更多</string>
    <!-- 其他 -->
    <string name="date_picker_format_year">%1$d年</string>
    <string name="date_picker_format_month">%1$d月</string>
    <string name="date_picker_format_day">%1$d日</string>
    <string name="str_help_str">关于</string>
    <string name="str_help_context">你别看我岁数小(版本:2.0),但我总结了,其实人这一生可短暂啦,眼一闭一睁,一天过去了,哈,眼一闭不睁,这辈子就过去了,哈.假如你活到100岁,在世上也就3万5千多天.想想,这3万多天里,有多少天是你Hold得住的呢?不管过去,hold住现在,成就将来.时间在流逝,hold住的时间好比阶梯,会将你送到巅峰.在过去的半年里,由ugeek团队打造《Hold住时间》已经成功帮助上万用户Hold住了生活中大量流失、浪费的时间，你也可以，还等什么...马上加入进来，让我们一起Hold住时间吧！</string>
    <string name="vip_use">VIP功能</string>

    <!-- 新建任务 -->
    <string name="new_set_remind_time">请设置提醒时间</string>
    <string name="new_set_remind_date">请设置任务日期</string>
    <string name="new_date_out">任务日期是过去的</string>
    <string name="new_time_out">提醒时间是过去的</string>
    <string name="new_title">新建任务</string>
    <string name="new_set_pro">请设置任务优先级别</string>
    <string name="new_set_type">请设置任务类型</string>
    <string name="new_no_null_tips">请输入任务，内容不能为空</string>
    <string name="new_set_date_tips">请设置任务日期、提醒时间</string>
    <string name="new_set_content">请填写任务内容</string>
    <string name="new_content_not_null">主题不能为空</string>
    <!-- vip弹出框 -->
    <string name="vip_title_tips">温馨提示</string>
    <string name="vip_content_tips">尊敬的用户，您目前还不是VIP会员，不具备VIP会员特权。仅需2000比特币，就可以成为我们的VIP会员，享受更多高级特权，迅速提升等级...</string>
    <string name="vip_buy">成为VIP会员</string>
    <string name="vip_bit_no_enough">比特币不够</string>
    <string name="vip_get_bit">赚取更多比特币</string>
    <string name="vip_cancel">暂不考虑</string>
    <string name="vip_score_to_bit">积分兑换比特币1-1</string>
    <string name="vip_bit_to_score">比特币兑换积分1-1</string>
    <string name="vip_score_no_enough">积分不够</string>
    <!-- 设置页面 -->
    <string name="settings_single">任务单个提醒</string>
    <string name="settings_cycle">周期提醒完成情况</string>
    <string name="settings_cycle_time">周期提醒循环时间</string>
    <string name="settings_notification_cover">消息提醒覆盖之前的</string>
    <string name="settings_show_dated">未完成页面显示过期</string>
    <string name="settings_show_tomorrow">桌面便签显示明天</string>
    <string name="settings_vip">VIP会员特权</string>
    <string name="settings_rank">Hold住等级</string>
    <string name="settings_game">玩游戏赚比特币</string>
    <string name="settings_app">试用应用赚比特币</string>
    <string name="settings_bit">您持有比特币</string>
    <string name="settings_strategy">Hold住攻略</string>
    <string name="settings_get_rank">正在获取网络排名...</string>
    <string name="settings_net_rank">网络排名</string>
    <!-- 更多页面 -->
    <string name="more_share_content">亲！《Hold住时间》是个不错的应用哦，能很好的帮助你管理时间，远离懒惰，Hold住那些浪费掉的时间耶，赶紧下一个吧，这是下载地址：http://files.cnblogs.com/itc0z0sti/HoldTime.apk 一定要下载哦，嘻嘻</string>
    <string name="more_share_app">分享应用给好友</string>
    <string name="more_go_grade">给应用加分</string>
    <string name="more_feedback">意见反馈</string>
    <string name="more_check_version">检查更新</string>
    <string name="more_app_help">应用手册</string>
    <string name="more_app_about">关于应用</string>
    <string name="more_app_use">功能介绍</string>
    <string name="more_exit">退出应用</string>
    <!-- hold住拱北、攻略 -->
    <string name="hold_popup_little_title">比特币，积分都是虚拟的，用户无需担心会有任何损失！网络排名主要根据用户的积分高低，积分越高排名会越靠前，等级也会越高</string>
    <string name="hold_popup_bit_title">如何获得更多比特币：</string>
    <string name="hold_popup_bit2">比特币(Bitcoin)是一种网络虚拟货币，可以理解为数据流量。比特币可以通过玩游戏，试用软件获得，下载试用的越多，比特币也就越多
</string>
    <string name="hold_popup_bit1">按时完成自己创建的任务、试玩游戏，试用软件，分享应用给好友...
</string>
    <string name="hold_popup_bit1_no">按时完成自己创建的任务、分享应用给好友...
</string>
    <string name="hold_popup_bit2_no">比特币(Bitcoin)是一种网络虚拟货币，可以理解为数据流量。可以通过分享应用给好友获得，好友下载安装的越多，比特币也就越多
</string>
    <string name="hold_remind_title">温馨提示：</string>
    <string name="hold_remind_content">所谓试用，就需有一定时长限制，一般不低于3分钟，少于3分钟将没有比特币赠送。下载试用同一个应用只能获取比特币一次，本产品内所有推荐应用均为官方提供，经过严格测试的无害，免费应用。绿色安全，您大可以放心安装试用。其中部分标明注册的应用就需要注册后试用方能获得比特币，用户大可绕过注册选择标明为试用的应用下载，同样可获得比特币</string>
    <string name="hold_popup_score_title">如何获取更多积分：</string>
    <string name="hold_popup_score_content">积分可以看成是经验值，完成的任务越多积分也就越多，等级也就越高。积分和比特币是1:1的关系，可以相互兑换。（非VIP会员完成个任务得到2个积分，VIP会员完成1个任务得到10个积分）
</string>
    <!-- vip页面 -->
    <string name="vip_add_type">增加任务类型</string>
    <string name="vip_del_tasktype">删除任务类型</string>
    <string name="vip_chg_tasktype">修改任务类型</string>
    <string name="vip_unfinish_type">未完成任务类型</string>
    <string name="vip_unfinish_pro">未完成任务优先级</string>
    <string name="vip_finish_type">完成任务类型</string>
    <string name="vip_finish_pro">完成任务优先级</string>
    <string name="vip_dated_type">过期任务类型</string>
    <string name="vip_dated_pro">过期任务优先级</string>
    <string name="vip_data_backup">备份数据</string>
    <string name="vip_data_recovery">恢复数据</string>
    <string name="vip_data_clear">清空数据</string>
    <string name="vip_change_type">修改任务类型</string>
    <string name="vip_type_exist">类型已经存在</string>
    <string name="vip_type_not_null">任务类型不能为空</string>
    <string name="vip_no_type_del">没有任务类型可删除</string>
    <string name="vip_del_type">删除任务类型</string>
    <string name="vip_no_type_change">没有任务类型可修改</string>
    <string name="vip_no_type_set">没有任务类型可设置</string>
    <string name="vip_unfinish_show_type">未完成页面显示任务类型为：</string>
    <string name="vip_finish_show_type">完成页面显示任务类型为</string>
    <string name="vip_dated_show_type">过期页面显示任务类型为：</string>
    <string name="vip_unfinish_show_pro">未完成页面显示优先级别为：</string>
    <string name="vip_finish_show_pro">完成页面显示优先级别为：</string>
    <string name="vip_dated_show_pro">过期页面显示优先级别为：</string>
    <string name="vip_backup_success">备份成功</string>
    <string name="vip_recover_success">恢复成功,请重启应用</string>
    <string name="vip_data_copy_error">数据复制出错</string>
    <string name="vip_no_data_record">目前没有数据记录</string>
    <string name="vip_no_backup_data">未备份数据</string>
    <!-- notification提醒 -->
    <string name="notification_cycle">今天，%1$d个任务未完成，%2$d个已过期！</string>
    <string name="notification_click">点击查看 - Hold住时间</string>
    <!-- 桌面 -->
    <string name="desktop_today">今天</string>
    <string name="desktop_tomorrow">明天</string>
    <string name="deskto_no_tips">请点击新建！</string>
    <!-- 上下文菜单 -->
    <string name="menu_type">任务类型：</string>
    <string name="menu_priority">优先级别：</string>
    <string name="menu_delete">删除任务</string>
    <string name="menu_finish_task">完成任务</string>
    <string name="menu_change_task">修改任务</string>
    <string name="menu_create_task">新建任务</string>
    <string name="menu_reset_task">重做该任务</string>
    <string name="menu_select_your_action">请选择您的动作：</string>
    <!-- 功能介绍 -->
    <string name="use_main_title">《Hold住时间》功能介绍</string>
    <string name="use_title">Hold住时间旨在帮助您更好地管理时间，可以方便地记录您每天Hold住的时间，同时拥有备忘提醒，任务类型分类等各种人性化功能</string>
    <string name="use_show_title">未完成、过期、完成：</string>
    <string name="use_unfinish">未完成页面：显示未完成的任务，对于过期的任务是否显示，可以通过设置（未完成页面显示过期）为是让其显示过期的任务，如果不想显示可以设置为否</string>
    <string name="use_dated">过期页面：显示过期且未完成的任务</string>
    <string name="use_finish">完成页面：显示完成的任务，不管过不过期。通过长按某个任务，或某一天的任务来重置或删除</string>
    <string name="use_settings_title">设置：</string>
    <string name="use_remind">提醒功能：单个任务提醒，设置为是的情况下，会像闹钟一样在您设置的时间点提醒您做您创建的任务，周期提醒设置为是，会根据您设置的循环时间，周期提醒您有多少任务未完成，有多少已经过期，以便您调节任务进度，调节效率等</string>
    <string name="use_show">显示功能：消息提醒覆盖之前的，当有消息提醒时，您的手机任务栏（标题处）会有提示，而当您设置创建了多个任务时，会有多个提示，如果您不清除，会显示多个提醒，而如果您设置为是，那么后来的提醒会覆盖之前的</string>
    <string name="use_vip">功能扩展：为了督促用户每天创建任务，并按时完成任务。《Hold住时间》加入了等级和网络排名等游戏性质的功能。积分越高，排名越靠前，等级也越高。积分可以通过按时完成您创建的任务，来获得，也可以通过试玩游戏等获得比特币，比特币转积分，以达到提升等级。成为VIP成员后，不仅能获得更多巨赞的功能，同时也让您更容易获得积分，等级升的越快</string>
    <string name="use_more_title">更多：</string>
    <string name="use_more_extend">推广：尊敬的用户，如果您觉得《Hold住时间》功能不错的话，您可以分享给您的好友，举手之劳，送人玫瑰，手留余香。我们将赠送您50个比特币，也可以到应用商店给好评哦</string>
    <string name="use_more_feedback">意见反馈：您可以将您对软件的意见，建议，或者不明白的地方反馈给我们，我们将在1个工作日内回复您</string>

</resources>