<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ovl_popup_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="13dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="20dp"
            android:gravity="bottom"
            android:text="@string/settings_strategy"
            android:textColor="#8bb60f"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_hold_popup_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/ovl_popup_close_icon" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="9dp"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:layout_marginTop="5dp"
                android:text="@string/hold_popup_little_title"
                android:textColor="@color/body_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_hold_popup_bit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="13dp"
                android:text="@string/hold_popup_bit_title"
                android:textColor="#8bb60f"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_hold_popup_bit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/hold_popup_bit1"
                android:textColor="@color/body_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_hold_popup_bit2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:text="@string/hold_popup_bit2"
                android:textColor="@color/body_text"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="13dp"
                android:text="@string/hold_popup_score_title"
                android:textColor="#8bb60f"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:text="@string/hold_popup_score_content"
                android:textColor="@color/body_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_hold_remind_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:layout_marginTop="13dp"
                android:text="@string/hold_remind_title"
                android:textColor="#8bb60f"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_hold_remind_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:text="@string/hold_remind_content"
                android:textColor="@color/body_text"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>