<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_help"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/hold_title_bg"
        android:gravity="center_vertical" >

        <TextView
            style="@style/TextView.Middle.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/str_help_str" />

        <Button
            android:id="@+id/btn_about_back"
            style="@style/TextView.Small.White"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_left_btn_bg"
            android:text="@string/app_back" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/body_bg" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/help_icon"
                style="@style/text_shadow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:maxWidth="250dp"
                android:text="@string/app_name"
                android:textColor="#F5761D"
                android:textSize="40sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/tv_about_version"
                style="@style/text_shadow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/app_version"
                android:textColor="@color/body_text" />

            <TextView
                android:id="@+id/help_context"
                style="@style/text_shadow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/str_help_context"
                android:textColor="@color/body_text"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="60dp"
                android:orientation="vertical" >

                <TextView
                    style="@style/text_shadow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/app_company"
                    android:textColor="#366596"
                    android:textSize="15sp" />

                <TextView
                    style="@style/text_shadow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/app_copyright_date"
                    android:textColor="#dd787878"
                    android:textSize="15sp" />

                <TextView
                    style="@style/text_shadow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/app_all_right"
                    android:textColor="#dd787878"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>