<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlt_splash_body"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/tv_app_name"
        style="@style/text_shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:maxWidth="250dp"
        android:maxLines="3"
        android:text="@string/app_name"
        android:textColor="#F5761D"
        android:textSize="40sp"
      android:typeface="monospace" />

    <TextView
        android:id="@+id/tv_wisdom"
        style="@style/text_shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_app_name"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:gravity="right"
        android:ellipsize="end"
        android:maxLines="2"
        android:lineSpacingExtra="5dp"
        android:maxWidth="250dp"
        android:textColor="#dd787878"
        android:textSize="15sp"
        android:typeface="monospace" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:orientation="vertical" >

        <TextView
            style="@style/text_shadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/app_company"
            android:textColor="#366596" />

        <TextView
            style="@style/text_shadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/app_copyright_date"
            android:textColor="#dd787878" />

        <TextView
            style="@style/text_shadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/app_all_right"
            android:textColor="#dd787878" />
    </LinearLayout>

</RelativeLayout>