<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="15.0dip"
    android:paddingRight="15.0dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/wxf_vip_top_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="18.0dip"
            android:paddingRight="18.0dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/iv_wxf_vip_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/wxf_vip_attention" />

                <TextView
                    android:id="@+id/tv_wxf_vip_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6.0dip"
                    android:shadowColor="@android:color/white"
                    android:shadowDx="1.2"
                    android:shadowDy="1.2"
                    android:shadowRadius="1.0"
                    android:text="@string/vip_title_tips"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/wxf_title_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_wxf_vip_content_tips"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingBottom="2.0dip"
                        android:paddingLeft="7.0dip"
                        android:paddingTop="13.0dip"
                        android:shadowColor="@android:color/white"
                        android:shadowDx="1.2"
                        android:shadowDy="1.2"
                        android:shadowRadius="1.0"
                        android:text="@string/vip_content_tips"
                        android:textColor="@color/vip_content_text"
                        android:textSize="@dimen/wxf_basic_text_size" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/wxf_vip_bottom_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="18.0dip"
            android:paddingRight="18.0dip" >

            <Button
                android:id="@+id/btn_wxf_buy_vip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14.0dip"
                android:background="@drawable/hold_btn_green_bg"
                android:shadowColor="@android:color/black"
                android:shadowDx="1.2"
                android:shadowDy="1.2"
                android:shadowRadius="1.0"
                android:text="@string/vip_buy"
                android:textColor="@android:color/white"
                android:textSize="16.0sp" />

            <Button
                android:id="@+id/btn_wxf_get_bit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14.0dip"
                android:background="@drawable/hold_btn_green_bg"
                android:shadowColor="@android:color/black"
                android:shadowDx="1.2"
                android:shadowDy="1.2"
                android:shadowRadius="1.0"
                android:text="@string/settings_app"
                android:textColor="@android:color/white"
                android:textSize="16.0sp" />

            <Button
                android:id="@+id/btn_wxf_not_buy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/hold_btn_red"
                android:shadowColor="@android:color/black"
                android:shadowDx="1.2"
                android:shadowDy="1.2"
                android:shadowRadius="1.0"
                android:text="@string/vip_cancel"
                android:textColor="@android:color/white"
                android:textSize="16.0sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>